Modification/Amélioration Connexion ROLE ENTREPRISE

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -47,7 +47,7 @@
             <a class="nav-item nav-link" href="{{ path('ficheSchool') }}">Centre de Formation</a>
           </li>
           <li class="nav-item">
-            <a class="nav-item nav-link" href="{{ path('ficheEnt') }}">Fiche Entreprise</a>
+            <a class="nav-item nav-link" href="{{ path('ficheEnt') }}">Profil</a>
           </li>
         {% endif %}
 
