Modification page index Entreprise en cours.

--- a/templates/entreprise/index.html.twig
+++ b/templates/entreprise/index.html.twig
@@ -5,28 +5,28 @@
 
 {% block body %}
   <section class="container">
-    <h3 class="text-center">Bienvenue sur Entreprise</h3>
+    <h3 class="text-center">IMAGE RGB</h3>
   </section>
 
-  <section class="container-fluid">
-    <div class="row">
-      <div class="col-12 col-md-4 border p-2 m-4">
-        <h4 class="text-center">Informations</h4>
-        <table>
-          <tbody>
-            <tr>
-              <th>Centre de formation : </th>
-            </tr>
-            <tr>
-              {% for schoolIndex in indexSchool %}
-                <th>{{ schoolIndex.identity }}</th>
-              {% endfor %}
-            </tr>
-          </tbody>
-        </table>
-      </div>
+
+
+
+<section class="container-fluid mt-4">
+  <div class="row">
+    <div class="col-12 col-md-4">
+      <h4 class="text-center">Centre de formation</h4>
+      <hr>
     </div>
-  </section>
+    <div class="col-12 col-md-4">
+      <h4 class="text-center">Formations</h4>
+      <hr>
+    </div>
+    <div class="col-12 col-md-4">
+      <h4 class="text-center">Langages / Framework</h4>
+      <hr>
+    </div>
+  </div>
+</section>
 
 
 
