Mise à jour partie student
Début CSS, partie student terminée, il manque quelques détails à peaufiner

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -13,8 +13,9 @@
 
 <body>
 <header>
-  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <a class="navbar-brand" href="">RGB</a>
+  <nav class="navbar navbar-expand-lg bg-navbar fixed-top">
+
+    <a class="navbar-brand" href=""><img class="logo" src="{{asset('assets/img/logorgb.png')}}" alt=""></a>
     {% if is_granted('ROLE_SCHOOL') %}
       <a class="navbar-brand" href="">/ {{ app.user.identity }}</a>
     {% endif %}
@@ -22,11 +23,12 @@
       <a class="navbar-brand" href="">/ {{ app.user.identity }}</a>
     {% endif %}
     {% if is_granted('ROLE_STUDENT') %}
-      <a class="navbar-brand" href="">/ {{ app.user.school }}</a>
+  
     {% endif %}
     {% if is_granted('ROLE_ADMIN') %}
       <a class="navbar-brand" href="">/ ADMIN SYSTEM</a>
     {% endif %}
+
 
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarIndex" aria-controls="navbarIndex" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -37,6 +39,7 @@
 
         <!-- NAVBAR ENTREPRISE -->
         {% if is_granted('ROLE_ENTREPRISE') %}
+        <div class="d-flex justify-content-center">
           <li class="nav-item">
             <a class="nav-item nav-link active" href="{{ path('indexEnt') }}">Accueil</a>
           </li>
@@ -49,6 +52,7 @@
           <li class="nav-item">
             <a class="nav-item nav-link" href="{{ path('ficheEnt') }}">Fiche Entreprise</a>
           </li>
+        </div>
         {% endif %}
 
         <!-- NAVBAR STUDENT -->
@@ -57,13 +61,7 @@
             <a class="nav-item nav-link active" href="{{path('student_home')}}">Accueil</a>
           </li>
           <li class="nav-item">
-            <a class="nav-item nav-link" href="{{path('student_update', {id : app.user.id})}}">Modifier profil</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-item nav-link" href=""></a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-item nav-link" href=""></a>
+            <a class="nav-item nav-link" href="{{path('student_update')}}">Modifier profil</a>
           </li>
         {% endif %}
 
@@ -130,7 +128,6 @@
 {% block body %}{% endblock %}
 
 <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
-
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/sweetalert2@9"></script>
