--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -49,8 +49,10 @@ footer{
 
 .actuality{
     margin-top: 100px;
-    height: 800px;
+    height: 500px;
     width: 718px;
+    overflow: scroll;
+    overflow-x: hidden;
 }
 
 .fc-toolbar.fc-header-toolbar{
@@ -60,16 +62,13 @@ footer{
 .display-4{
     font-size: 1.5em;
     overflow: scroll;
-}
-
-.jumbotron{
-    height: 500px;
-    overflow: scroll;
+    overflow-x: hidden; 
 }
 
 #results{
     overflow: scroll;
     max-height: 500px;
+    overflow-x: hidden; 
 }
 
 .partenaires{
@@ -79,6 +78,7 @@ footer{
 .files{
     overflow: scroll;
     max-height: 400px;
+    overflow-x: hidden;
 }
 
 .titres {
@@ -90,4 +90,25 @@ footer{
 
 .form-bg{
     background-color:#e3e6e9;
+}
+
+li{
+    list-style: none;
+}
+
+#mailboxToggle{
+    max-height: 450px;
+    overflow: scroll;
+    overflow-x: hidden; 
+}
+.logo{
+    height: 100px;
+    width: 200px;
+}
+
+.bg-navbar{
+    background-color:#F8F8F8;
+}
+header{
+    margin-top: 150px;
 }
