Ajout template de base
CSS mise en forme

--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -6,13 +6,87 @@
 
 
 
+<div class="row">
+  <div class="fondPrincipal col-sm-12 col-md-12 col-lg-6">
+    <img src="{{asset('assets/img/fondPrincipal.png')}}" class="img-fluid" alt="fond ecran principal">
+  </div>
+
+  <div class="containerSlogan container">
+
+    <p class="slogan">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium
+    </p>
+
+    <p class="text-muted">
+      totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt
+      explicabo.
+    </p>
+  </div>
+</div>
 
 <div class="container">
-    <h1 class="mt-5 text-center">PAGE PRINCIPALE A CONSTRUIRE</h1>
-    <p>RGB est une plateforme relationnelle entre entreprise proposant un stage et un étudiant<br>
-      Le principe :<br>
-      C'est l'entreprise qui choisi son étudiant.</p>
+  <a class="btn text-light btnChasse rounded-pill">Acceder à son espace</a>
 </div>
+
+<div class="row text-center">
+  <div class="col-sm-12 col-md-12 col-12">
+    <h4 class="queFaisonsNous text-center">Que faisons nous ?</h4>
+  </div>
+
+  <div class="container">
+    <div class="d-flex justify-content-center">
+      <p class="text-muted w-50">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fuga quos quaerat sapiente
+        nam, id vero
+      </p>
+    </div>
+  </div>
+
+</div>
+
+<div class="row">
+  <div class="col-sm-12 col-md-8 col-lg-4">
+    <div class="container">
+      <div class="jumbotron jumbotronActivites">
+        <div class="d-flex justify-content-center">
+          <div class="rounded-circle rondCards"></div>
+        </div>
+        <h4>Activité 1</h4>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique, tempora.</p>
+      </div>
+
+    </div>
+  </div>
+  <div class="col-sm-12 col-md-8 col-lg-4">
+    <div class="container">
+      <div class="jumbotron jumbotronActivites">
+        <div class="d-flex justify-content-center">
+          <div class="rounded-circle rondCards"></div>
+        </div>
+        <h4>Activité 2</h4>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique, tempora.</p>
+      </div>
+
+    </div>
+  </div>
+  <div class="col-sm-12 col-md-8 col-lg-4">
+    <div class="container">
+      <div class="jumbotron jumbotronActivites">
+        <div class="d-flex justify-content-center">
+          <div class="rounded-circle rondCards"></div>
+        </div>
+        <h4>Activité 3</h4>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique, tempora.</p>
+      </div>
+
+    </div>
+  </div>
+
+
+</div>
+
+
+
+
+
 
 
 
