--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1,6 +1,15 @@
-footer{
+/*CSS FINAL STUDENT */
 
-    height:60px ;
+body{
+    font-family: 'Lato',
+    sans-serif;
+    font-size: 1em;
+}
+
+
+footer{
+    height:220px;
+    padding: 10px;
 }
 
 #calendar{
@@ -101,6 +110,8 @@ li{
     overflow: scroll;
     overflow-x: hidden; 
 }
+
+/*CSS FINAL */
 .logo{
     height: 100px;
     width: 200px;
@@ -111,4 +122,31 @@ li{
 }
 header{
     margin-top: 150px;
+}
+
+.slogan{
+font-family: 'Lato',
+sans-serif;
+font-size: 1.8em;
+}
+
+.btnChasse{
+    background-color: #4285f4;
+    padding: 10px;
+    width: 180px;
+}
+
+.queFaisonsNous{
+    padding-top: 40px;
+}
+
+.rondCards{
+    height: 75px;
+    width: 75px;
+    background-color: #4285f4;
+    position: relative;
+    top:-100px;
+}
+.jumbotronActivites{
+    margin-top: 30px;
 }
