--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -7,7 +7,10 @@
     <title>{% block title %}Welcome!{% endblock %}</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <link rel="stylesheet" href="{{asset('assets/css/style.css')}}">
+    <link href="https://fonts.googleapis.com/css?family=Lato&display=swap" rel="stylesheet">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+
+
     {% block stylesheets %}{% endblock %}
 </head>
 
@@ -126,6 +129,30 @@
 </header>
 
 {% block body %}{% endblock %}
+
+  <footer>
+    <div class"container-fluid">
+      <div class="d-flex justify-content-around">
+   
+        <div>
+          <i class="fa fa-facebook"></i>
+        </div>
+
+        <div>
+          <i class="fas fa-twitter-square"></i>
+        </div>
+    
+        <div>
+          <i class="fa fas-instagram"></i>
+        </div>
+
+      </div>
+      <div>
+        <p>Copyright 2020 RGB All rights reserved
+        </p>
+      </div>
+    </div>
+  </footer>
 
 <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
