--- a/templates/entreprise/index.html.twig
+++ b/templates/entreprise/index.html.twig
@@ -11,19 +11,75 @@
 
 
 
+
 <section class="container-fluid mt-4">
   <div class="row">
     <div class="col-12 col-md-4">
       <h4 class="text-center">Centre de formation</h4>
       <hr>
+
+      {% for listSchool in indexSchool %}
+        <div class="d-flex justify-content-center">
+          <div class="card mx-2 my-2" style="width: 18rem;">
+            <div class="card-body">
+              <h5 class="card-title text-center">{{ listSchool.identity }}</h5>
+              <p class="card-text text-center">Centre de Formation</p>
+              <div class="text-center">{{ listSchool.apeName }}</div>
+            </div>
+            <ul class="list-group list-group-flush">
+              <li class="list-group-item">
+                <div class="text-center">{{ listSchool.adressPro }}</div>
+                <div class="text-center">{{ listSchool.zipcodePro }}  {{ listSchool.cityPro }}</div>
+                <div class="text-center">{{ listSchool.departement }}</div>
+              </li>
+              <li class="list-group-item">
+                <div class="text-center"><b>Contact :</b></div>
+                <div class="text-center">{{ listSchool.firstname }} {{ listSchool.lastname }}</div>
+                <div class="text-center">{{ listSchool.phonePro }}</div>
+                <div class="text-center">{{ listSchool.email }}</div>
+              </li>
+            </ul>
+            <div class="card-body">
+              <a type="button" class="btn btn-outline-info" href="{{ path('ficheSchool') }}" class="card-link">en savoir plus</a>
+            </div>
+          </div>
+        </div>
+      {% endfor %}
     </div>
+
+
     <div class="col-12 col-md-4">
       <h4 class="text-center">Formations</h4>
       <hr>
+      {% for formation in indexFormation %}
+        <ul class="list-group list-group-flush">
+          <li class="list-group-item">{{ formation.name }} / <small>(Nbre) Elèves Inscrit</small></li>
+        </ul>
+      {% endfor %}
     </div>
+
+
     <div class="col-12 col-md-4">
-      <h4 class="text-center">Langages / Framework</h4>
+      <h4 class="text-center">Langages et outils</h4>
       <hr>
+      <div class="row">
+        <div class="col-12 col-sm-12 col-lg-6">
+          <h6>Languages</h6>
+          {% for lang in indexLangages %}
+            <ul class="list-group list-group-flush">
+              <li class="list-group-item">{{ lang.langage }}</li>
+            </ul>
+          {% endfor %}
+        </div>
+        <div class="col-12 col-sm-12 col-lg-6">
+          <h6>Outils/Framework</h6>
+          {% for frame in indexFramework %}
+            <ul class="list-group list-group-flush">
+              <li class="list-group-item">{{ frame.name }}</li>
+            </ul>
+          {% endfor %}
+        </div>
+      </div>
     </div>
   </div>
 </section>
