--- a/templates/home/attente.html.twig
+++ b/templates/home/attente.html.twig
@@ -1,16 +1,82 @@
-{% extends 'base.html.twig' %}
+{#{% extends 'base.html.twig' %}#}
 
-{% block title %}Attente Validation{% endblock %}
-{% block stylesheets %}
+{% block title %}{% endblock %}
+  {% block stylesheets %}
+<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    <style type="text/css">
+      .image {
+        background-image: url('https://zupimages.net/viewer.php?id=20/11/oxku.jpg');
+        background-repeat: no-repeat;
+        background-size: cover;
+      }
 
-<style type="text/css">
+    </style>
+  {% endblock %}
 
-</style>
+  {% block body %}
 
+    <section class="container">
+      <header class="">
+        <h2 class="text-center">Demande de connexion</h2>
+        <h1 class="text-center">Mise en attente...</h1>
+      </header>
+
+    </section>
+
+
+
+
+    <article class="image">
+
+      {#<img src="{{ asset('assets/img/horloge.jpg') }}">#}
+
+      <div class="container p-3 mb-2 bg-light text-dark rounded-lg">
+        <header class="">
+          <h2 class="text-center">Demande de connexion</h2>
+          <h1 class="text-center">Mise en attente...</h1>
+        </header>
+        <hr>
+
+        <div class=" text-justify">
+          <p>Votre demande d'inscription a été mise en attente de validation pour la raison suivante : <br>
+           <b><i>Votre entreprise ne correspond pas aux critères demandés par le centre de formation.</i></b><br>
+           <br>
+           Toutefois, même si votre secteur d'activité n'est pas lié au monde de l'informatique et que vous recherchez des personnes en liens avec ce domaine, n'hésitez pas à écrire et à expliquer le motif de votre recherche au centre de formation en charge de votre validation.
+           Pour celà, utiliser le formulaire ci dessous. Un membre de l'équipe vous répondra dans les plus bref délais. <br>
+           Nous vous remercions de l'intêret que vous porter à notre plateforme.
+         </p>
+         <hr>
+         <form method="post" class="">
+
+            <div class="form-group row">
+              <label for="email" class="col-sm-2 col-form-label">Email</label>
+              <div class="col-sm-8">
+                <input type="email" class="form-control" id="email">
+              </div>
+            </div>
+            <div class="form-group row">
+              <label for="password" class="col-sm-2 col-form-label">Password</label>
+              <div class="col-sm-8">
+                <input type="password" class="form-control" id="password">
+              </div>
+            </div>
+            <div class="form-group">
+              <label for="textarea">Example textarea</label>
+              <textarea class="form-control" id="textarea" rows="3"></textarea>
+            </div>
+            <div class="form-group row">
+              <div class="col-12 col-md-6">
+                <button type="submit" class="btn btn-primary">Envoyer</button>
+              </div>
+            </div>
+
+        </form>
+
+       </div>
+     </div>
+   </article>
 {% endblock %}
 
+{% block javascripts %}
 
-
-
-{% block body %}
 {% endblock %}
