--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -4,8 +4,8 @@
 
 {% block javascripts %}
 
-  {% for messages in app.flashes('register') %}
-   <script type="text/javascript">
+{% for messages in app.flashes('register') %}
+  <script type="text/javascript">
     Swal.fire({
       icon: 'success',
       title: 'Félicitation',
@@ -20,43 +20,40 @@
     });
     </script>
   {% endfor %}
-
 {% endblock %}
 
 {% block body %}
+  <div class="container ">
 
-
-<div class="container ">
-
-<form method="post" class="m-5 p-2">
-    {% if error %}
+    <form method="post" class="m-5 p-2">
+      {% if error %}
         <div class="alert alert-danger">{{ error.messageKey|trans(error.messageData, 'security') }}</div>
-    {% endif %}
+      {% endif %}
 
-    {% if app.user %}
+      {% if app.user %}
         <div class="mb-3">
-            You are logged in as {{ app.user.firstname }} {{ app.user.lastname }} , <a href="{{ path('app_logout') }}">Logout</a>
+          You are logged in as {{ app.user.firstname }} {{ app.user.lastname }} , <a href="{{ path('app_logout') }}">Logout</a>
         </div>
-    {% endif %}
+      {% endif %}
 
-    <h1 class="h3 mb-3 font-weight-normal text-center">Veuillez vous identifier !</h1>
-    <br>
-    <div class="form-row  mb-3">
-      <label for="inputEmail" class="col-form-label col-3">Email</label>
-      <div class="col-12 col-md-9">
-        <input type="email" value="{{ last_username }}" name="email" id="inputEmail" class="form-control" required autofocus>
+      <h1 class="h3 mb-3 font-weight-normal text-center">CONNEXION</h1>
+      <br>
+      <div class="form-row  mb-3">
+        <label for="inputEmail" class="col-form-label col-3">Email</label>
+        <div class="col-12 col-md-9">
+          <input type="email" value="{{ last_username }}" name="email" id="inputEmail" class="form-control" required autofocus>
+        </div>
       </div>
-    </div>
-    <div class="form-row  mb-3">
-      <label for="inputPassword" class="col-form-label col-3">Password</label>
-      <div class="col-12 col-md-9">
-        <input type="password" name="password" id="inputPassword" class="form-control" required>
+      <div class="form-row  mb-3">
+        <label for="inputPassword" class="col-form-label col-3">Password</label>
+        <div class="col-12 col-md-9">
+          <input type="password" name="password" id="inputPassword" class="form-control" required>
+        </div>
       </div>
-    </div>
 
-    <input type="hidden" name="_csrf_token"
-           value="{{ csrf_token('authenticate') }}"
-    >
+      <input type="hidden" name="_csrf_token"
+      value="{{ csrf_token('authenticate') }}"
+      >
 
     {#
         Uncomment this section and add a remember_me option below your firewall to activate remember me functionality.
@@ -67,12 +64,12 @@
                 <input type="checkbox" name="_remember_me"> Remember me
             </label>
         </div>
-    #}
-    <div class="row">
-      <div class="col-12 text-center">
-        <button class="btn btn-lg btn-primary" type="submit">Connexion</button>
-      </div>
+        #}
+        <div class="row">
+          <div class="col-12 text-center">
+            <button class="btn btn-lg btn-primary" type="submit">Connexion</button>
+          </div>
+        </div>
+      </form>
     </div>
-</form>
-</div>
-{% endblock %}
+  {% endblock %}
