--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -5,8 +5,8 @@
      <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <title>{% block title %}Welcome!{% endblock %}</title>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <link rel="stylesheet" href="{{asset('assets/css/style.css')}}">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link href="https://fonts.googleapis.com/css?family=Lato&display=swap" rel="stylesheet">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 
@@ -131,7 +131,7 @@
 {% block body %}{% endblock %}
 
   <footer>
-    <div class"container-fluid">
+    <div class"container-fluid footer">
       <div class="d-flex justify-content-around">
    
         <div>
@@ -139,16 +139,16 @@
         </div>
 
         <div>
-          <i class="fas fa-twitter-square"></i>
+          <i class="fa fa-twitter-square"></i>
         </div>
     
         <div>
-          <i class="fa fas-instagram"></i>
+          <i class="fa fa-instagram"></i>
         </div>
 
       </div>
       <div>
-        <p>Copyright 2020 RGB All rights reserved
+        <p class="text-center mt-5 copyright">&copy; RGB 2020
         </p>
       </div>
     </div>
