--- a/templates/school/delete_student.html.twig
+++ b/templates/school/delete_student.html.twig
@@ -1,12 +1,14 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Backoffice{% endblock %}
+{% block title %}Backoffice
+{% endblock %}
 
 {% block body %}
+
 {% block styles %}
 	<style>
-		body{
-  background-color:#f2f2f2;
+			body {
+	 background-color:#f2f2f2;
 
 }
 h1{
@@ -19,17 +21,14 @@ color: #4285F4;
 {% endblock styles %}
 
 
-<h1 class="text-center my-5"><strong>Fiche utilisateur</strong></h1>
+	<div class="container my-5">
+		<div class="row">
+			<div class="col-lg-12">
+				<h1 class="text-center my-5">Suppresion de utilisateur
+					<span class="font-weight-bold">"{{ users.lastname }}"</span><br>
+				</h1>
 
-
-<div class="container justify-content-center mt-5  p-3">
-  <div class="row">
-    <div class="col-8">
-
-     <form method="post" class="my-5 justify-content-center">
-      <h2>{{users.firstname}}</h2><br>
-
-  <table class="table">
+			 <table class="table">
       <tbody>
           <tr>
             <th>Prénom :</th>
@@ -82,11 +81,26 @@ color: #4285F4;
           </tr>
           </tbody>
         </table><br>
-              <a class="btn btn-outline-warning " href="{{ path('list_valid') }}" class="text-light">Retour</a>
-              <a type="submit" class="btn btn-outline-success" href="{{ path('modif_student', {id: users.id}) }}" class="text-light">modifier</a>
-      </form>
-    </div>
-  </div>
-</div>
+				<div class="d-flex mt-5">
+					<div class="mx-auto">
+						<div class="alert alert-danger">Attention si vous supprimez cet utilisateur ça sera définitif</div>
+					</div>
+				</div>
 
+				<form class="d-flex" method="post">
+					<div class="mx-auto">
+						<p class="text-center h4">Supprimer cet utilisateur ?</p>
+						<div class="d-flex">
+							<div class="mx-auto my-5">
+								<a href="{{ path('list_valid') }}" class="btn btn-outline-warning">Retour</a>
+								<input type="hidden" name="delete" value="yes">
+								<button type="submit" class="btn btn-outline-danger">Supprimer</button>
+							</div>
+						</div>
+					</div>
+				</form>
+			</div>
+		</div>
+	</div>
 {% endblock %}
+
