--- a/templates/school/modif_student.html.twig
+++ b/templates/school/modif_student.html.twig
@@ -3,78 +3,98 @@
 {% block title %}Connexion{% endblock %}
 
 {% block body %}
+{% block styles %}
+	<style>
+		body {
+	 background-color:#f2f2f2;
 
-<h1>Modifier Elève</h1>
+}
+h1{
+color: #4285F4;
+}
+.table{
+  background-color:#d9d9d9;
+}
+	</style>
+{% endblock styles %}
+
+
+<h1 class="text-center my-5">Modifier Elève</h1>
+
+{% if formValid is not null and formValid == true %}
+	<div class="alert alert-success text-center">
+		Elève à été modifié dans la base de données<br>
+		- l'équipe de RGB -
+	</div>
+{% elseif formValid is not null and formValid == false %}
+	<div class="alert alert-danger text-center">
+		{{ errors|join('<br>')|raw }}
+	</div>
+{% endif %}
 
 
 
 
-<div class="container justify-content-center">
+<div class="container justify-content-center my-5">
   <div class="row">
-    <div class="col">
+    <div class="col-8">
 
 
-
-       <form method="post" class="m-5 justify-content-center">
-
+        <form method="post">
            <div class="form mb-3  ">
-          <label for="title" class="col-form-label">Adresse</label>
-          <div for="title" >
-             <input type="text" name="title" id="title" class="form-control" value="{{ user.address }}">
+          <label for="address" class="col-form-label">Adresse</label>
+          <div for="address" >
+             <input type="text" name="address" id="address" class="form-control" value="{{ user.address }}" >
           </div>
         </div>
 
          <div class="form  mb-3">
-          <label class="form-label">Code postale</label>
-          <div for="content" >
-           <input type="text" name="title" id="title" class="form-control" value="{{user.zipcode}}">
+          <label for="zipcode" class="form-label">Code postale</label>
+          <div for="zipcode" >
+            <input type="text" name="zipcode" id="zipcode" class="form-control" value="{{ user.zipcode }}" >
+
           </div>
         </div>
 
          <div class="form  mb-3">
-          <label class="form-label">Ville</label>
-          <div for="content" >
-           <input type="text" name="title" id="title" class="form-control" value="{{user.city}}">
+          <label for="city" class="form-label">Ville</label>
+          <div for="city" >
+            <input type="text" name="city" id="city" class="form-control" placeholder="{{ user.city }}">
           </div>
         </div>
 
 
          <div class="form mb-3  ">
-          <label for="resume" class="col-form-label">Email</label>
-          <div for="resume">
-            <input type="text" name="title" id="title" class="form-control" value="{{user.email}}">
+          <label for="email" class="col-form-label">Email</label>
+          <div for="email">
+            <input type="text" name="email" id="email" class="form-control" value="{{ user.email }}">
           </div>
         </div>
 
-
          <div class="form  mb-3">
-          <label class="form-label">Téléphone</label>
-          <div for="content" >
-           <input type="text" name="title" id="title" class="form-control" value="{{user.phone}}">
+          <label for="phone" class="form-label">Téléphone</label>
+          <div for="phone" >
+            <input type="text" name="phone" id="phone" class="form-control" value="{{ user.phone }}">
           </div>
         </div>
 
          <div class="form mb-3  ">
-          <label for="resume" class="col-form-label">Web site</label>
-          <div for="resume">
-            <input type="text" name="title" id="title" class="form-control" value="{{user.web}}">
+          <label for="web" class="col-form-label">Web site</label>
+          <div for="web">
+            <input type="text" name="web" id="web" class="form-control" value="{{ user.web }}">
           </div>
         </div>
 
         <div class="form mb-3  ">
-          <label for="resume" class="col-form-label">Github</label>
-          <div for="resume">
-            <input type="text" name="title" id="title" class="form-control" value="{{user.github}}">
+          <label for="github" class="col-form-label">Github</label>
+          <div for="github">
+            <input type="text" name="github" id="github" class="form-control" value="{{ user.github }}">
           </div>
         </div>
+        <a type="button" class="btn btn-outline-warning" href="{{ path('list_valid') }}">Retour</a>
+        <button type="submit" class="btn btn-outline-success" href="{{ path('list_valid') }}">Valider</button>
 
-
-
-         <a  class="btn btn-outline-success m-3 rounded-0" href="{{ path('list_valid') }}" class="text-info">Retour</a>
-           <a type="submit" class="btn btn-outline-warning m-3 rounded-0" href="{{ path('view_student', {id: user.id}) }}" class="text-danger">Valider</a>
        </form>
-       <hr>
-
     </div>
   </div>
 </div>
