--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -23,50 +23,64 @@
 {% endblock %}
 
 {% block body %}
-  <div class="container ">
-
-    <form method="post" class="m-5 p-2">
-      {% if error %}
-        <div class="alert alert-danger">{{ error.messageKey|trans(error.messageData, 'security') }}</div>
-      {% endif %}
-
-      {% if app.user %}
-        <div class="mb-3">
-          You are logged in as {{ app.user.firstname }} {{ app.user.lastname }} , <a href="{{ path('app_logout') }}">Logout</a>
-        </div>
-      {% endif %}
-
-      <h1 class="h3 font-weight-normal text-center">Se connecter</h1>
-      <br>
-      <div class="form-row mb-3 ">
-        <label for="inputEmail" class="col-form-label col-3">Email</label>
-          <input type="email" value="{{ last_username }}" placeholder="Veuillez entrer votre email..." name="email" id="inputEmail" class="form-control rounded-pill p-4" required autofocus>  
-      </div>
-
-      <div class="form-row  mb-3">
-        <label for="inputPassword" class="col-form-label col-3">Password</label>
-          <input type="password" name="password" placeholder="*****"  id="inputPassword" class="form-control rounded-pill p-4" required>
-      </div>
-
-      <input type="hidden" name="_csrf_token"
-      value="{{ csrf_token('authenticate') }}"
-      >
-
-    {#
-        Uncomment this section and add a remember_me option below your firewall to activate remember me functionality.
-        See https://symfony.com/doc/current/security/remember_me.html
-
-        <div class="checkbox mb-3">
-            <label>
-                <input type="checkbox" name="_remember_me"> Remember me
-            </label>
-        </div>
-        #}
-        <div class="row">
-          <div class="col-12 text-center">
-            <button class="btn btn-lg btn-primary rounded-pill btn-block" type="submit">Connexion</button>
-          </div>
-        </div>
-      </form>
+  <div class="row">
+    
+    <div class="col-sm-12 col-md-12 col-lg-6 fondConnexion ">
+      <img src="{{asset('assets/img/fondConnexion.png')}}" alt="">
     </div>
+
+
+    <div class="col-sm-12 col-lg-6 col-md-12">
+      <div class="d-flex justify-content-center">
+      
+            <form method="POST" class="p-2 formConnexion">
+              {% if error %}
+                <div class="alert alert-danger">{{ error.messageKey|trans(error.messageData, 'security') }}</div>
+              {% endif %}
+
+              {% if app.user %}
+                <div class="mb-3">
+                  You are logged in as {{ app.user.firstname }} {{ app.user.lastname }} , <a href="{{ path('app_logout') }}">Logout</a>
+                </div>
+              {% endif %}
+
+              <h1 class="h3 font-weight-normal text-center">Se connecter</h1>
+              <br>
+              <div class="form-row mb-3 ">
+                <label for="inputEmail" class="col-form-label col-3">Email</label>
+                  <input type="email" value="{{ last_username }}" placeholder="Veuillez entrer votre email..." name="email" id="inputEmail" class="form-control rounded-pill p-4" required autofocus>  
+              </div>
+
+              <div class="form-row  mb-3">
+                <label for="inputPassword" class="col-form-label col-3">Password</label>
+                  <input type="password" name="password" placeholder="*****"  id="inputPassword" class="form-control rounded-pill p-4" required>
+              </div>
+
+              <input type="hidden" name="_csrf_token"
+              value="{{ csrf_token('authenticate') }}"
+              >
+
+            {#
+                Uncomment this section and add a remember_me option below your firewall to activate remember me functionality.
+                See https://symfony.com/doc/current/security/remember_me.html
+
+                <div class="checkbox mb-3">
+                    <label>
+                        <input type="checkbox" name="_remember_me"> Remember me
+                    </label>
+                </div>
+                #}
+                <div class="row">
+                  <div class="col-12 text-center">
+                    <button class="btn btn-lg btn-primary rounded-pill btn-block" type="submit">Connexion</button>
+                  </div>
+                </div>
+              </form>
+            </div>
+          </div>
+
+
+
+
+      </div>
   {% endblock %}
